--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,6 +51,7 @@
     "lucide-react": "^0.454.0",
     "next": "^16.0.10",
     "next-themes": "latest",
+    "qr-scanner": "^1.4.2",
     "qrcode.react": "latest",
     "react": "19.2.0",
     "react-day-picker": "9.8.0",
