--- a/backend/package.json
+++ b/backend/package.json
@@ -36,6 +36,7 @@
     "nodemon": "^3.1.10",
     "pdf-lib": "^1.17.1",
     "qrcode": "^1.5.4",
+    "razorpay": "^2.9.6",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1"
   }
