--- a/backend/package.json
+++ b/backend/package.json
@@ -32,6 +32,7 @@
     "mongoose": "^8.20.2",
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
+    "node-mailjet": "^6.0.11",
     "nodemailer": "^7.0.11",
     "nodemon": "^3.1.10",
     "pdf-lib": "^1.17.1",
